test header remove white space in distant remove fix

--- a/css/landing.css
+++ b/css/landing.css
@@ -9,13 +9,6 @@ body {
 
 }
 
-html {
-  margin-top: 0 !important;
-}
-#wpadminbar {
-  display: none !important;
-}
-
 
 h1 {
     font-size: 55px;
